# session-bridge

./: .gitignore  README.md  TUTORIAL.md  in.claude-code.jsonl  pyproject.toml
docs/: schema-reference.md
src/session_bridge/: _ids.py  cli.py  convert.py  handshake.py  ir.py  place.py
src/session_bridge/readers/: _content.py  _jsonl.py  _pending.py  claude_code.py  codex.py  hermes.py
src/session_bridge/writers/: _common.py  claude_code.py  codex.py  hermes.py  hermes_db.py
tests/: conftest.py  test_claude_reader.py  test_codex_reader.py  test_handshake_convert_cli.py  test_hermes_db.py  test_hermes_reader.py  test_ir.py  test_place.py  test_review_fixes.py  test_review_round11_fixes.py  test_review_round12_fixes.py  test_review_round13_fixes.py  test_review_round14_fixes.py  test_review_round16_fixes.py  test_review_round17_fixes.py  test_review_round18_fixes.py  test_review_round18b_fixes.py  test_review_round1_fixes.py  test_review_round21_fixes.py  test_review_round22_fixes.py  test_review_round25_fixes.py  test_review_round27_fixes.py  test_review_round28_fixes.py  test_review_round2_fixes.py  test_review_round3_fixes.py  test_review_round4_fixes.py  test_review_round5_fixes.py  test_review_round6_fixes.py  test_review_round7_fixes.py  test_review_round8_fixes.py  test_review_round9_fixes.py  test_stub_open_calls.py  test_writers.py
tests/fixtures/: claude_pending.jsonl  claude_sample.jsonl  codex_pending.jsonl  codex_sample.jsonl  hermes_pending.jsonl  hermes_sample.jsonl
