[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "session-bridge"
version = "0.1.0"
description = "Local-first cross-harness agent-session portability: export a live coding-agent session from one harness and resume it in another."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
session-bridge = "session_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
